--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ else()
     else()
         add_executable(QtToDoList
             ${PROJECT_SOURCES}
+            resources.qrc
         )
     endif()
 endif()
